--- a/css/styles.css
+++ b/css/styles.css
@@ -35,3 +35,29 @@ nav {
     padding: 10px;
     border-radius: 2px;
 }
+#home-section {
+    background-color:rgba(0, 0, 0, 0.5);
+}
+#my-description {
+    float: left;
+    margin-left: 20%;
+    margin-right: 100px;
+}
+#my-description p{
+    font-family: monospace;
+    font-size: 14px;
+}
+#my-description a {
+    text-decoration: none;
+    color: rgb(230,240,180);
+    font-size: 18px;
+    padding: 8px;
+    border: 1px solid rgba(0, 0, 0,0.2);
+    
+}
+#my-description a:hover {
+    background-color: rgb(230,240,180);
+    border-radius: 2px;
+    color: black;
+    font-size: 20px;
+}
