Edit class-name of heading section in index.html and styles.css files

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ nav {
     padding: 10px;
     border-radius: 2px;
 }
-#home-section {
+#heading-section {
     background-color:rgba(0, 0, 0, 0.5);
 }
 #my-description {
