--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
     background-color: rgb(218, 205, 224);
     margin: 0;
     color: white;
+    box-sizing: border-box;
 }
 nav {
     height: 10vh;
@@ -117,7 +118,7 @@ nav {
     background-color: rgba(0,0,0,0.5);
     display: flex;
     flex-direction: column;
-    height: 40vh;
+    height: 45vh;
     clear: left;
 }
 #about-section h1{
@@ -146,4 +147,132 @@ nav {
 }
 #contact p {
     font-size: 20px;
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px){
+    nav {
+        height: 8vh;
+        background-color: rgb(29, 27, 27);
+        display: flex;
+        justify-content: space-around;
+    }
+    .nav-brand {
+        align-self: center;
+        color: rgb(249, 250, 244);
+        font-size: 15px;
+        font-style: italic;
+    }
+    .nav-content {
+        align-self: center;
+    }
+    .nav-content ul li{
+        margin-right: 4px;
+    }
+    .nav-content ul li a {
+        font-size: 13px;
+    }
+    .nav-content ul li a:hover {
+        background-color: rgb(115, 128, 71);
+        padding: 5px;
+        border-radius: 2px;
+    }
+    #heading-section {
+        background-color:rgba(0, 0, 0, 0.5);
+        padding-top: 50px;
+        padding-bottom: 2%;
+        display: flex;
+    }
+    #my-description {
+        margin-left: 0;
+        margin-right: 5px;
+        margin-bottom: 0;
+    }
+    #heading-section img {
+        width: 250px;
+    }
+    #project-section {
+        color: darkred;
+        display: flex;
+        flex-direction: column;
+    }
+    #project-section h2{
+        color: black;
+        text-align: center;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    #project-section ul {
+       display: flex;
+       flex-wrap: wrap;
+       margin: 0 auto;
+    }
+    #project-section ul li {
+        width: 250px;
+        position: relative;
+        margin-bottom: 5px;
+        background-color: rgb(236, 232, 238);
+    }
+    #about-section h1 {
+        font-size: 25px;
+    }
+    #about-section p {
+        width: 50%;
+        font-size: 16px;
+    }
+    #contact h1 {
+        font-size: 25px;
+    }
+    #contact p {
+        font-size: 18px;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 991px){
+    #heading-section {
+        display: flex;
+        padding-top: 70px;
+        justify-content: space-around;
+    }
+    #my-description {
+        margin-left: 0;
+        margin-right: 5px;
+        margin-bottom: 0;
+    }
+    
+    #project-section ul {
+       display: flex;
+       flex-wrap: wrap;
+       margin: 0 auto;
+    }
+    #project-section ul li {
+        width: 200px;
+        margin-bottom: 5px;
+    }
+    #about-section h1{
+        font-size: 25px;
+    }
+    #about-section p {
+        width: 50%;
+        font-size: 18px;
+    }
+   
+}
+@media screen and (min-width: 992px) and (max-width: 1199px){
+    #heading-section {
+        display: flex;
+        padding-top: 70px;
+        justify-content: space-around;
+    }
+    #my-description {
+        margin-left: 0;
+        margin-right: 5px;
+        margin-bottom: 0;
+    }
+    #project-section ul {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 auto;
+     }
+     #project-section ul li {
+         width: 250px;
+         margin-bottom: 5px;
+     }
 }
